schema/testdata/validation_arbitrary_functions_unknown_message_return/schema.keel
model Person {
    functions {
        write createBulkPeople(Any) returns (UnknownMessage)
    }
}
