schema/testdata/errors/arbitrary_functions_unknown_message_return.keel
model Person {
    actions {
        //expect-error:46:60:ActionInputError:read and write functions must return a message-based response, or Any
        write createBulkPeople(Any) returns (UnknownMessage) @function
    }
}
